# iq-xtreme

./: .gitignore  Makefile  README.md  pyproject.toml  ruff.toml
doc/: 1-iq-xtreme.md  2-accessing-the-api.md  3-iq-xtreme-sdk.md
examples/: ccqp_sdk.py  miqp_sdk.py  qubo_sdk.py  quco_sdk.py  qudo_sdk.py  tsp_sdk.py
src/iq/api/: iqrestapi.py  validate.py
src/iq/optim/: ccqp.py  miqp.py  qubo.py  quco.py  qudo.py  tsp.py
tutorials/QUBO/: max_clique.ipynb  max_clique.py  max_cut.ipynb  max_cut.py  max_cut_2.py  max_independent_set.ipynb  max_independent_set.py
tutorials/QUBO/data/: G1.csv  G2.csv  G3.csv  G4.csv  G5.csv
tutorials/QUCO/: community_detection.ipynb  community_detection.py
tutorials/QUDO/: diversified_transportation_problem.ipynb  diversified_transportation_problem.py
