[build-system]
requires = [
  "setuptools",
  "wheel",
  "numpy"
]
build-backend = "setuptools.build_meta"

[project]
name = "iq-xtreme"
version = "1.0"
description = "Inspiration-Q iQ-Xtreme optimization API"
readme = "README.md"
dependencies = [
  "numpy",
  "matplotlib",
  "networkx",
  "requests"
]

[project.urls]
Homepage = "https://www.inspiration-q.com"
Repository = "https://github.com/iQ-code/iq-xtreme"

[tool.setuptools.packages.find]
where = ["src"]
include = ["iq.*"]
namespaces = true
